# momo-fyp

./: .gitignore  README.md  SKILL.md  cspell.json  install.bat  pyproject.toml  skills-lock.json  start.bat
backend/: __init__.py  app.py  config.py  device_utils.py  model_manager.py  resource_manager.py  state_machine.py  types.py
backend/audio/: interaction_audio.py  playback.py  player.py  position_audio.py
backend/interaction/: __init__.py  roi.py
backend/lighting/: __init__.py  controller.py
backend/llm/: __init__.py  ollama_client.py
backend/prompting/: __init__.py  examples_loader.py  prompt_builder.py
backend/serial/: __init__.py  esp32_link.py
backend/servo/: __init__.py  geometry.py
backend/storage/: __init__.py  csv_logger.py
backend/telemetry/: __init__.py  system_stats.py
backend/tts/: __init__.py  benchmark_worker.py  model_profiles.py  qwen_clone.py  qwen_runtime.py  reference_selection.py  semantic_runtime.py
backend/vision/: __init__.py  actions.py  face_eyes.py  features.py  person_detector.py  pose_tracker.py  runtime.py
frontend/: index.html  package-lock.json  package.json
tests/: test_actions.py  test_api.py  test_audio_controller.py  test_audio_playback.py  test_audio_player.py  test_config.py  test_device_utils.py  test_features.py  test_interaction_roi.py  test_light_controller.py  test_position_audio.py  test_position_features.py  test_prompt_builder.py  test_reference_selection.py  test_resource_manager.py  test_serial_link.py  test_servo_geometry.py  test_system_stats.py  test_tts_benchmark.py  test_vision_runtime.py
(+30 files in other folders)
