[project]
name = "momo"
version = "0.1.0"
description = "Interactive audience tracking backend with YOLO person detection and ESP32 SG90 eye control"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.116.0",
  "lap>=0.5.13",
  "numpy>=1.26.0",
  "opencv-python>=4.11.0.86,<4.12",
  "psutil>=7.0.0",
  "pydantic>=2.11.0",
  "pyserial>=3.5",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "ultralytics>=8.4.27",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
